# esp_wiz_toe

./: .componentignore  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  README.md  TODO.md  idf_component.yml
.github/workflows/: ci.yml  upload_component.yml
examples/: build_summary.txt
examples/tcp_client/: CMakeLists.txt  README.md
examples/tcp_client/main/: CMakeLists.txt  main.c
examples/tcp_server/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
examples/tcp_server/main/: main.c
examples/udp_echo/: CMakeLists.txt  README.md  sdkconfig
examples/udp_echo/main/: main.c
include/: esp_w5500_toe.h  esp_wiz_toe.h
include/esp_wiz_toe/Ethernet/: socket.h
src/: esp_w5500_toe.c  esp_w5500_toe_socket.c  esp_w5500_toe_socket.h  esp_w5500_toe_spi.c  esp_w5500_toe_spi.h  esp_wiz_toe.c  esp_wiz_toe_internal.h  esp_wiz_toe_net.c  esp_wiz_toe_port.c  esp_wiz_toe_socket.c  esp_wiz_toe_spi.c  esp_wiz_toe_spi.h
